--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.6",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.16",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.1",
+    "vue-search-select": "^2.8.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
